<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="30dp"
    android:layout_marginEnd="30dp"
    android:background="@drawable/background_alert"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/title_alert"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/message_alert"
        android:textAlignment="center"
        android:textSize="17sp"
        android:textColor="@color/black"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_ok_alert"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/md_theme_primaryContainer"
        android:text="@string/teks_button_alert"
        android:textColor="@color/md_theme_onPrimaryContainer"
        app:cornerRadius="11dp" />
</LinearLayout>