<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_detection_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brown"
    tools:context=".ui.DetailDetectionActivity">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/baskervville_regular"
            android:text="@string/app_name"
            android:textColor="@color/brown"
            android:textSize="48sp" />
    </Toolbar>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_detail_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="160dp"
        android:backgroundTint="@color/brown"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_detail_image"
            android:layout_width="match_parent"
            android:layout_height="191dp"
            android:scaleType="centerCrop"
            android:src="@drawable/bingka_kentang2"
            tools:ignore="ContentDescription" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_title_name"
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="104dp"
        android:fontFamily="@font/proxima_nova_thin"
        android:text="@string/title_name"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/cv_detail_image"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_body_name"
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="1dp"
        android:fontFamily="@font/proxima_nova_semibold"
        android:justificationMode="inter_word"
        android:text="@string/body_name_wadai"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/cv_detail_image"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_name" />

    <TextView
        android:id="@+id/tv_title_expired"
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="13dp"
        android:fontFamily="@font/proxima_nova_thin"
        android:text="@string/title_expired"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/cv_detail_image"
        app:layout_constraintTop_toBottomOf="@+id/tv_body_name" />

    <TextView
        android:id="@+id/tv_body_expired"
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="1dp"
        android:fontFamily="@font/proxima_nova_semibold"
        android:justificationMode="inter_word"
        android:text="@string/body_expired"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/cv_detail_image"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_expired" />

    <TextView
        android:id="@+id/tv_title_about"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/proxima_nova_semibold"
        android:text="@string/title_about"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_detail_image" />

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_about"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/tv_body_about"
            android:layout_width="347dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="31dp"
            android:fontFamily="@font/proxima_nova_light"
            android:justificationMode="inter_word"
            android:text="@string/body_about"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_about" />

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>