<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_surface"
    tools:context=".ui.MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="210dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/md_theme_onPrimaryContainer"
        app:cardCornerRadius="20dp"
        app:cardElevation="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_set_image"
            android:layout_width="match_parent"
            android:layout_height="202dp"
            android:scaleType="centerCrop"
            android:src="@drawable/upload_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_upload_image"
        android:layout_width="152dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/md_theme_primaryContainer"
        android:drawableTop="@drawable/ic_upload"
        android:text="@string/upload_gambar"
        android:textColor="@color/md_theme_onPrimaryContainer"
        app:cornerRadius="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_pengantar" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_camera"
        android:layout_width="152dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/md_theme_primaryContainer"
        android:drawableTop="@drawable/ic_camera"
        android:text="@string/take_picture"
        android:textColor="@color/md_theme_onPrimaryContainer"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_pengantar"
        app:layout_constraintTop_toBottomOf="@+id/tv_pengantar" />

    <TextView
        android:id="@+id/tv_pengantar"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/pengantar"
        android:textAlignment="center"
        android:textColor="@color/md_theme_onSurfaceVariant"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

</androidx.constraintlayout.widget.ConstraintLayout>